hphp/hack/test/typecheck/variadics/ellipsis_strict_mode.php.exp
File "ellipsis_strict_mode.php", line 31, characters 19-20:
Was expecting a type hint (what about: varray) (Typing[4033])
